# otchaoskriging

./: README.rst  pyproject.toml  setup.py
.github/workflows/: build.yml
otchaosgpr/: __init__.py  chaos_gpr.py
otchaoskriging/: __init__.py  chaos_kriging.py
test/: test_ishigami.py
