[build-system]
requires = ["setuptools"]

[project]
name = "otchaosgpr"
version = "0.1"
description = "Chaos / GPR metamodels"
readme = "README.rst"
dependencies = ["openturns"]
authors = [
  {name = "Julien Schueller"},
]
license = {text= "LGPL-3.0-or-later"}
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]

[tool.setuptools]
packages = ["otchaosgpr"]

[project.optional-dependencies]
doc = ["numpydoc", "sphinx-gallery", "sphinx"]
